--- a/articles-1.html
+++ b/articles-1.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-  <!-- header：與首頁共用（選單目前頁加 active） -->
+  <!-- header -->
   <header class="site-header">
     <div class="container header-inner">
       <a class="brand" href="index.html">
@@ -38,13 +38,11 @@
       </div>
     </section>
 
-    <!-- 文章卡片網格（Flex + wrap） -->
     <section class="section section--no-top">
       <div class="container">
         <div class="card-grid">
-          <!-- 一張卡片（以下可複製貼上，照 Figma 張數放） -->
           <article class="card">
-            <img class="card-img" src="images/IMG_0519.JPG" alt="Article cover" />
+            <img class="card-img" src="images/IMG_0519.JPG" alt="Diver swimming with sea turtle in Green Island waters" />
             <div class="card-body">
               <h3 class="card-title">Magical Moments with Sea Turtles</h3>
               <p class="card-text">Discover the vibrant underwater world of Green Island and experience an unforgettable...</p>
@@ -89,7 +87,7 @@
           </article>
 
           <article class="card">
-            <img class="card-img" src="images/IMG_20250914_161036_117.jpg" alt="Article cover" />
+            <img class="card-img" src="images/IMG_20250914_161036_117.jpg" alt="Dive boat preparing for departure with gear" />
             <div class="card-body">
               <h3 class="card-title">Setting Sail for Adventure</h3>
               <p class="card-text">The journey begins above the waves — ready your gear, feel the breeze, and...</p>
@@ -98,7 +96,7 @@
           </article>
 
           <article class="card">
-            <img class="card-img" src="images/IMG_20250914_161507_596.jpg" alt="Article cover" />
+            <img class="card-img" src="images/IMG_20250914_161507_596.jpg" alt="Garden-like coral reef formations underwater" />
             <div class="card-body">
               <h3 class="card-title">Garden of the Sea</h3>
               <p class="card-text">Explore the living tapestry of the reef, a breathtaking underwater...</p>
@@ -107,7 +105,7 @@
           </article>
 
           <article class="card">
-            <img class="card-img" src="images/P9125235.JPG" alt="Article cover" />
+            <img class="card-img" src="images/P9125235.JPG" alt="Sunlight penetrating cave underwater" />
             <div class="card-body">
               <h3 class="card-title">Light Through the Cave</h3>
               <p class="card-text">Swim through the glowing passage where sunlight meets the sea — a hidden...</p>
@@ -116,7 +114,7 @@
           </article>
 
           <article class="card">
-            <img class="card-img" src="images/P9125263.JPG" alt="Article cover" />
+            <img class="card-img" src="images/P9125263.JPG" alt="Divers communicating with hand signals" />
             <div class="card-body">
               <h3 class="card-title">Connection in the Deep</h3>
               <p class="card-text">Underwater, words fade — but a single gesture says it all. Trust, respect, and...</p>
@@ -125,7 +123,6 @@
           </article>
         </div>
 
-        <!-- pagination：頁碼（純 HTML/CSS，符合課堂） -->
         <nav class="pagination" aria-label="分頁">
           <a class="page-btn disabled" aria-label="previous">«</a>
           <a class="page-num active" href="articles-1.html">1</a>
@@ -136,7 +133,7 @@
     </section>
   </main>
 
-  <!-- footer：與首頁共用 -->
+  <!-- footer -->
   <footer class="site-footer">
     <div class="container footer-top">
       <div class="footer-brand">
