--- a/articles-2.html
+++ b/articles-2.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-  <!-- header：與首頁共用（選單目前頁加 active） -->
+  <!-- header -->
   <header class="site-header">
     <div class="container header-inner">
       <a class="brand" href="index.html">
@@ -38,13 +38,11 @@
       </div>
     </section>
 
-    <!-- 文章卡片網格（Flex + wrap） -->
     <section class="section section--no-top">
       <div class="container">
         <div class="card-grid">
-          <!-- 第二頁的文章 -->
           <article class="card">
-            <img class="card-img" src="images/IMG_20250914_155545_025.jpg" alt="Article cover" />
+            <img class="card-img" src="images/IMG_20250914_155545_025.jpg" alt="Diver exploring mysterious deep sea area" />
             <div class="card-body">
               <h3 class="card-title">Deep Sea Exploration</h3>
               <p class="card-text">Venture into the mysterious depths of the ocean where sunlight fades and incredible creatures thrive in darkness...</p>
@@ -53,7 +51,7 @@
           </article>
 
           <article class="card">
-            <img class="card-img" src="images/IMG_20250914_155826_899.jpg" alt="Article cover" />
+            <img class="card-img" src="images/IMG_20250914_155826_899.jpg" alt="Night diving scene with nocturnal marine life" />
             <div class="card-body">
               <h3 class="card-title">Night Diving Adventures</h3>
               <p class="card-text">Experience the ocean's transformation after sunset, where nocturnal marine life creates a completely different underwater world...</p>
@@ -62,7 +60,7 @@
           </article>
 
           <article class="card">
-            <img class="card-img" src="images/IMG_20250914_160424_615.jpg" alt="Article cover" />
+            <img class="card-img" src="images/IMG_20250914_160424_615.jpg" alt="Coral reef conservation work in progress" />
             <div class="card-body">
               <h3 class="card-title">Coral Reef Conservation</h3>
               <p class="card-text">Learn about the importance of coral reef ecosystems and how divers can contribute to their preservation and restoration...</p>
@@ -71,7 +69,7 @@
           </article>
 
           <article class="card">
-            <img class="card-img" src="images/IMG_20250914_161257_920.jpg" alt="Article cover" />
+            <img class="card-img" src="images/IMG_20250914_161257_920.jpg" alt="Technical diving equipment display" />
             <div class="card-body">
               <h3 class="card-title">Technical Diving Basics</h3>
               <p class="card-text">Master the fundamentals of technical diving, from advanced equipment to safety protocols for deeper explorations...</p>
@@ -80,7 +78,7 @@
           </article>
 
           <article class="card">
-            <img class="card-img" src="images/IMG_20250914_161507_028.jpg" alt="Article cover" />
+            <img class="card-img" src="images/IMG_20250914_161507_028.jpg" alt="Underwater navigation training session" />
             <div class="card-body">
               <h3 class="card-title">Underwater Navigation</h3>
               <p class="card-text">Develop essential navigation skills to explore underwater environments safely and confidently return to your entry point...</p>
@@ -89,7 +87,7 @@
           </article>
 
           <article class="card">
-            <img class="card-img" src="images/P9125201.JPG" alt="Article cover" />
+            <img class="card-img" src="images/P9125201.JPG" alt="Marine life photography capture" />
             <div class="card-body">
               <h3 class="card-title">Marine Life Photography Tips</h3>
               <p class="card-text">Capture stunning underwater photographs with professional techniques for lighting, composition, and marine life behavior...</p>
@@ -98,7 +96,7 @@
           </article>
 
           <article class="card">
-            <img class="card-img" src="images/IMG_0519.JPG" alt="Article cover" />
+            <img class="card-img" src="images/IMG_0519.JPG" alt="Beginner scuba diving lesson in progress" />
             <div class="card-body">
               <h3 class="card-title">Beginner's Guide to Scuba Diving</h3>
               <p class="card-text">Start your underwater adventure with essential knowledge about equipment, techniques, and safety for new divers...</p>
@@ -107,7 +105,7 @@
           </article>
 
           <article class="card">
-            <img class="card-img" src="images/IMG_0719.JPG" alt="Article cover" />
+            <img class="card-img" src="images/IMG_0719.JPG" alt="Freediver swimming in ocean depths" />
             <div class="card-body">
               <h3 class="card-title">Freediving Fundamentals</h3>
               <p class="card-text">Master the art of freediving with breathing techniques, safety protocols, and mental preparation strategies...</p>
@@ -116,7 +114,7 @@
           </article>
 
           <article class="card">
-            <img class="card-img" src="images/IMG_0734.JPG" alt="Article cover" />
+            <img class="card-img" src="images/IMG_0734.JPG" alt="Seasonal diving scene in Taiwan waters" />
             <div class="card-body">
               <h3 class="card-title">Seasonal Diving in Taiwan</h3>
               <p class="card-text">Discover the best times to dive around Taiwan's coast and what marine life to expect throughout the year...</p>
@@ -125,7 +123,6 @@
           </article>
         </div>
 
-        <!-- pagination：頁碼 -->
         <nav class="pagination" aria-label="分頁">
           <a class="page-btn" href="articles-1.html" aria-label="previous">«</a>
           <a class="page-num" href="articles-1.html">1</a>
