Fix image path extensions - change JPG to jpg for GitHub Pages compatibility

--- a/articles-1.html
+++ b/articles-1.html
@@ -42,7 +42,7 @@
       <div class="container">
         <div class="card-grid">
           <article class="card">
-            <img class="card-img" src="images/IMG_0519.JPG" alt="Diver swimming with sea turtle in Green Island waters" />
+            <img class="card-img" src="images/IMG_0519.jpg" alt="Diver swimming with sea turtle in Green Island waters" />
             <div class="card-body">
               <h3 class="card-title">Magical Moments with Sea Turtles</h3>
               <p class="card-text">Discover the vibrant underwater world of Green Island and experience an unforgettable...</p>
@@ -51,7 +51,7 @@
           </article>
 
           <article class="card">
-            <img class="card-img" src="images/IMG_0719.JPG" alt="Article cover" />
+            <img class="card-img" src="images/IMG_0719.jpg" alt="Article cover" />
             <div class="card-body">
               <h3 class="card-title">Blue Depth Journey</h3>
               <p class="card-text">Immerse yourself in the serenity of Green Island’s ocean floor, where rays...</p>
@@ -60,7 +60,7 @@
           </article>
 
           <article class="card">
-            <img class="card-img" src="images/IMG_0734.JPG" alt="Article cover" />
+            <img class="card-img" src="images/IMG_0734.jpg" alt="Article cover" />
             <div class="card-body">
               <h3 class="card-title">Peaceful Freedom in the Deep Blue</h3>
               <p class="card-text">In the tranquil depths of Green Island, feel the calm and freedom that only diving can...</p>
@@ -69,7 +69,7 @@
           </article>
 
           <article class="card">
-            <img class="card-img" src="images/IMG_0758.JPG" alt="Article cover" />
+            <img class="card-img" src="images/IMG_0758.jpg" alt="Article cover" />
             <div class="card-body">
               <h3 class="card-title">Dive Buddies Beneath the Blue</h3>
               <p class="card-text">Feel the joy of friendship and teamwork under the sea — where every dive becomes...</p>
@@ -105,7 +105,7 @@
           </article>
 
           <article class="card">
-            <img class="card-img" src="images/P9125235.JPG" alt="Sunlight penetrating cave underwater" />
+            <img class="card-img" src="images/P9125235.jpg" alt="Sunlight penetrating cave underwater" />
             <div class="card-body">
               <h3 class="card-title">Light Through the Cave</h3>
               <p class="card-text">Swim through the glowing passage where sunlight meets the sea — a hidden...</p>
@@ -114,7 +114,7 @@
           </article>
 
           <article class="card">
-            <img class="card-img" src="images/P9125263.JPG" alt="Divers communicating with hand signals" />
+            <img class="card-img" src="images/P9125263.jpg" alt="Divers communicating with hand signals" />
             <div class="card-body">
               <h3 class="card-title">Connection in the Deep</h3>
               <p class="card-text">Underwater, words fade — but a single gesture says it all. Trust, respect, and...</p>
