--- a/articles-2.html
+++ b/articles-2.html
@@ -87,7 +87,7 @@
           </article>
 
           <article class="card">
-            <img class="card-img" src="images/P9125201.JPG" alt="Marine life photography capture" />
+            <img class="card-img" src="images/P9125201.jpg" alt="Marine life photography capture" />
             <div class="card-body">
               <h3 class="card-title">Marine Life Photography Tips</h3>
               <p class="card-text">Capture stunning underwater photographs with professional techniques for lighting, composition, and marine life behavior...</p>
@@ -96,7 +96,7 @@
           </article>
 
           <article class="card">
-            <img class="card-img" src="images/IMG_0519.JPG" alt="Beginner scuba diving lesson in progress" />
+            <img class="card-img" src="images/IMG_0519.jpg" alt="Beginner scuba diving lesson in progress" />
             <div class="card-body">
               <h3 class="card-title">Beginner's Guide to Scuba Diving</h3>
               <p class="card-text">Start your underwater adventure with essential knowledge about equipment, techniques, and safety for new divers...</p>
@@ -105,7 +105,7 @@
           </article>
 
           <article class="card">
-            <img class="card-img" src="images/IMG_0719.JPG" alt="Freediver swimming in ocean depths" />
+            <img class="card-img" src="images/IMG_0719.jpg" alt="Freediver swimming in ocean depths" />
             <div class="card-body">
               <h3 class="card-title">Freediving Fundamentals</h3>
               <p class="card-text">Master the art of freediving with breathing techniques, safety protocols, and mental preparation strategies...</p>
@@ -114,7 +114,7 @@
           </article>
 
           <article class="card">
-            <img class="card-img" src="images/IMG_0734.JPG" alt="Seasonal diving scene in Taiwan waters" />
+            <img class="card-img" src="images/IMG_0734.jpg" alt="Seasonal diving scene in Taiwan waters" />
             <div class="card-body">
               <h3 class="card-title">Seasonal Diving in Taiwan</h3>
               <p class="card-text">Discover the best times to dive around Taiwan's coast and what marine life to expect throughout the year...</p>
