--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
         <div class="card-row">
           <article class="card">
-            <img class="card-img" src="images/IMG_0519.JPG" alt="Diver swimming with sea turtle in Green Island waters" />
+            <img class="card-img" src="images/IMG_0519.jpg" alt="Diver swimming with sea turtle in Green Island waters" />
             <div class="card-body">
               <h3 class="card-title">Magical Moments with Sea Turtles</h3>
               <p class="card-text">
@@ -58,7 +58,7 @@
           </article>
 
           <article class="card">
-            <img class="card-img" src="images/IMG_0719.JPG" alt="Diver exploring deep blue waters with schools of fish" />
+            <img class="card-img" src="images/IMG_0719.jpg" alt="Diver exploring deep blue waters with schools of fish" />
             <div class="card-body">
               <h3 class="card-title">Blue Depth Journey</h3>
               <p class="card-text">
@@ -69,7 +69,7 @@
           </article>
 
           <article class="card">
-            <img class="card-img" src="images/IMG_0734.JPG" alt="Diver floating peacefully in deep blue ocean" />
+            <img class="card-img" src="images/IMG_0734.jpg" alt="Diver floating peacefully in deep blue ocean" />
             <div class="card-body">
               <h3 class="card-title">Peaceful Freedom in the Deep Blue</h3>
               <p class="card-text">
@@ -88,7 +88,7 @@
 
         <div class="spot-row">
           <article class="spot-card">
-            <img class="spot-img" src="images/P9125235.JPG" alt="Moai statue underwater diving site in Green Island" />
+            <img class="spot-img" src="images/P9125235.jpg" alt="Moai statue underwater diving site in Green Island" />
             <div class="spot-overlay">
               <h3 class="spot-title">Moai Statue Dive Site</h3>
               <p class="spot-meta">Taiwan, Green Island</p>
@@ -96,7 +96,7 @@
           </article>
 
           <article class="spot-card">
-            <img class="spot-img" src="images/P9125263.JPG" alt="Underwater mailbox diving spot in Green Island" />
+            <img class="spot-img" src="images/P9125263.jpg" alt="Underwater mailbox diving spot in Green Island" />
             <div class="spot-overlay">
               <h3 class="spot-title">Underwater Mailbox</h3>
               <p class="spot-meta">Taiwan, Green Island</p>
@@ -125,7 +125,7 @@
     <section class="section section--tight" id="gear">
       <div class="container gear-inner">
         <div class="gear-media">
-          <img class="gear-img" src="images/P9125270.JPG" alt="2025 best diving gear equipment" />
+          <img class="gear-img" src="images/P9125270.jpg" alt="2025 best diving gear equipment" />
         </div>
 
         <div class="gear-text">
